--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-
-<div class="card flex justify-content-center">
-  <p-button label="Check" icon="pi pi-check"></p-button>
-  <i class="pi pi-check"></i>
-<i class="pi pi-times"></i>
-</div>
+<router-outlet></router-outlet>
